--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -100,6 +100,13 @@
               </li>
 
               <li class="slide">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:popup' %}">
+                  <i class="side-menu__icon fe fe-user"></i>
+                  <span class="side-menu__label">Popup</span>
+                </a>
+              </li>
+
+              <li class="slide">
                 <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:bannerlist' %}">
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Banners</span>
@@ -130,12 +137,13 @@
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Testimonials</span>
                 </a>
-              </li> <li class="slide">
-                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:reservationlist' %}">
-                  <i class="side-menu__icon fe fe-user"></i>
-                  <span class="side-menu__label">Reservations</span>
-                </a>
               </li>
+<!--              <li class="slide">-->
+<!--                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:testimoniallist' %}">-->
+<!--                  <i class="side-menu__icon fe fe-user"></i>-->
+<!--                  <span class="side-menu__label">Reservations</span>-->
+<!--                </a>-->
+<!--              </li>-->
 
             </ul>
             <div class="slide-right" id="slide-right">
