--- a/templates/website/about/about.html
+++ b/templates/website/about/about.html
@@ -270,53 +270,53 @@
 <!--</section>-->
 
 
-<div class="book-table-hp-1 section-box">
-<div class="container">
-<div class="book-content">
-<form class="form-detail" method="post">
-<h3 class="special-heading">Reservation</h3>
-<h2 class="special-heading-1">BOOK A TABLE</h2>
-<p>Tempus urna et pharetra pharetra massa massa. Malesuada fames ac turpis egestas. Ut tristique et egestas quis.</p>
-<div class="form-group">
-<div class="form-row">
-<select name="people" id="people" class="input-text">
-<option value="1 Person">1 Person</option>
-<option value="2 Person">2 Person</option>
-<option value="3 Person">3 Person</option>
-<option value="4 Person">4 Person</option>
-</select>
-<span class="select-btn">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-<span class="special">
-For
-</span>
-</div>
-<div class="form-row form-row-1">
-<input type="text" name="date" class="date" id="date" placeholder="8/9/2018">
-<span class="special">
-At
-</span>
-</div>
-<div class="form-row form-row-2">
-<select name="time" id="time" class="input-text">
-<option value="7:00pm">7:00pm</option>
-<option value="8:00pm">8:00pm</option>
-<option value="9:00pm">9:00pm</option>
-<option value="10:00pm">10:00pm</option>
-</select>
-<span class="select-btn">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</div>
-<div class="form-row form-row-3">
-<input type="submit" name="submit" class="submit au-btn au-btn-red btn-medium" value="BOOK A TABLE">
-</div>
-</div>
-</form>
-</div>
-</div>
-</div>
+<!--<div class="book-table-hp-1 section-box">-->
+<!--<div class="container">-->
+<!--<div class="book-content">-->
+<!--<form class="form-detail" method="post">-->
+<!--<h3 class="special-heading">Reservation</h3>-->
+<!--<h2 class="special-heading-1">BOOK A TABLE</h2>-->
+<!--<p>Tempus urna et pharetra pharetra massa massa. Malesuada fames ac turpis egestas. Ut tristique et egestas quis.</p>-->
+<!--<div class="form-group">-->
+<!--<div class="form-row">-->
+<!--<select name="people" id="people" class="input-text">-->
+<!--<option value="1 Person">1 Person</option>-->
+<!--<option value="2 Person">2 Person</option>-->
+<!--<option value="3 Person">3 Person</option>-->
+<!--<option value="4 Person">4 Person</option>-->
+<!--</select>-->
+<!--<span class="select-btn">-->
+<!--<i class="zmdi zmdi-chevron-down"></i>-->
+<!--</span>-->
+<!--<span class="special">-->
+<!--For-->
+<!--</span>-->
+<!--</div>-->
+<!--<div class="form-row form-row-1">-->
+<!--<input type="text" name="date" class="date" id="date" placeholder="8/9/2018">-->
+<!--<span class="special">-->
+<!--At-->
+<!--</span>-->
+<!--</div>-->
+<!--<div class="form-row form-row-2">-->
+<!--<select name="time" id="time" class="input-text">-->
+<!--<option value="7:00pm">7:00pm</option>-->
+<!--<option value="8:00pm">8:00pm</option>-->
+<!--<option value="9:00pm">9:00pm</option>-->
+<!--<option value="10:00pm">10:00pm</option>-->
+<!--</select>-->
+<!--<span class="select-btn">-->
+<!--<i class="zmdi zmdi-chevron-down"></i>-->
+<!--</span>-->
+<!--</div>-->
+<!--<div class="form-row form-row-3">-->
+<!--<input type="submit" name="submit" class="submit au-btn au-btn-red btn-medium" value="BOOK A TABLE">-->
+<!--</div>-->
+<!--</div>-->
+<!--</form>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 
 <section class="time-open-section time-open-about section-box">
