--- a/templates/website/layouts/footer.html
+++ b/templates/website/layouts/footer.html
@@ -31,7 +31,7 @@
 </div>
 </div>
 </div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+<div class="col-xl-3 col-lg-1 col-md-6 col-sm-12 col-12">
 <!--<div class="footer-item">-->
 <!--<h5>INSTAGRAM</h5>-->
 <!--<div class="insta-content">-->
@@ -58,7 +58,7 @@
 <!--</div>-->
 <!--</div>-->
 </div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+<div class="col-xl-3 col-lg-5 col-md-6 col-sm-12 col-12">
 <div class="footer-item">
 <h5>CONTACT INFO</h5>
 <div class="contact-content">
@@ -85,8 +85,8 @@
 <i class="zmdi zmdi-time"></i>
 <div class="text">
 <div class="text-inner">
-<span class="text-1">Lunch:</span>
-<span class="text-2">Everyday</span>
+<span class="text-1">Monday:</span>
+<span class="text-2">11:30 - 14:30 & 5:00 - 21:30</span>
 </div>
 <div class="text-inner">
 <span class="text-1">Dinner: Mon- Thu </span>
@@ -112,26 +112,26 @@
 <i class="zmdi zmdi-chevron-up"></i>
 </a>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
+<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">-->
+<!--  Launch demo modal-->
+<!--</button>-->
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Have a look</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <img src="{% static 'website/images/hp-1-cta.jpg' %}" />
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+<!--        <button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
     </div>
   </div>
