--- a/templates/superadmin/home/index.html
+++ b/templates/superadmin/home/index.html
@@ -21,7 +21,7 @@
                              <div class="card-body">
                                  <div class="d-flex">
                                      <div class="text-white">
-                                         <h2 class="mb-0 number-font">0</h2>
+                                         <h2 class="mb-0 number-font">{{category}}</h2>
                                          <p class="text-white mb-0">Category</p>
                                      </div>
                                      <div class="ms-auto">
@@ -39,7 +39,7 @@
                              <div class="card-body">
                                  <div class="d-flex">
                                      <div class="text-white">
-                                         <h2 class="mb-0 number-font">0</h2>
+                                         <h2 class="mb-0 number-font">{{menu}}</h2>
                                          <p class="text-white mb-0">Menu</p>
                                      </div>
                                      <div class="ms-auto"> <i class="fa fa-balance-scale text-white fs-30 me-2 mt-2"></i> </div>
