--- a/templates/website/about/about.html
+++ b/templates/website/about/about.html
@@ -319,30 +319,30 @@
 <!--</div>-->
 
 
-<section class="time-open-section time-open-about section-box">
-<div class="container">
-<div class="row">
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
-<div class="time-content">
-<h4>Lunch 12:00 - 14:00</h4>
-<span>Everyday</span>
-</div>
-</div>
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
-<div class="time-content">
-<h4>Dinner 18:00 - 21:30</h4>
-<span>Monday – Thursday</span>
-</div>
-</div>
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">
-<div class="time-content">
-<h4>Dinner 19:00 - 21:00</h4>
-<span>Friday – Sunday</span>
-</div>
-</div>
-</div>
-</div>
-</section>
+<!--<section class="time-open-section time-open-about section-box">-->
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">-->
+<!--<div class="time-content">-->
+<!--<h4>Lunch 12:00 - 14:00</h4>-->
+<!--<span>Everyday</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">-->
+<!--<div class="time-content">-->
+<!--<h4>Dinner 18:00 - 21:30</h4>-->
+<!--<span>Monday – Thursday</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12">-->
+<!--<div class="time-content">-->
+<!--<h4>Dinner 19:00 - 21:00</h4>-->
+<!--<span>Friday – Sunday</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 
 </div>
 {% include 'website/layouts/footer.html' %}
