--- a/templates/website/contact/contactus.html
+++ b/templates/website/contact/contactus.html
@@ -32,19 +32,48 @@
 <div class="contact-info">
 <i class="zmdi zmdi-time"></i>
 <h4>Open Time</h4>
-<div class="time">
-<div class="time-inner">
-<span class="day">Lunch:</span>
-<span class="hour">Everyday</span>
+<div class="time" style="font-size: smaller;">
+<div class="text-inner">
+<span class="text-1">Monday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
 </div>
-<div class="time-inner">
-<span class="day">Dinner: Mon- Thu </span>
-<span class="hour">18:00-21:30</span>
+
+<div class="text-inner">
+<span class="text-1">Tuesday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
 </div>
-<div class="time-inner">
-<span class="day">Dinner: Fri- Sun</span>
-<span class="hour">19:00-21:00</span>
+
+
+<div class="text-inner">
+<span class="text-1">Wednessday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
 </div>
+
+
+<div class="text-inner">
+<span class="text-1">Thursday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
+</div>
+
+
+<div class="text-inner">
+<span class="text-1">Friday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 22:00</span>
+</div>
+
+
+<div class="text-inner">
+<span class="text-1">Saturday:</span>
+<span class="text-2">12:00 - 15:00 & 17:00 - 22:30</span>
+</div>
+
+
+<div class="text-inner">
+<span class="text-1">Sunday:</span>
+<span class="text-2">12:00 - 15:00 & 17:00 - 21:30</span>
+</div>
+
+
 </div>
 </div>
 </div>
