--- a/templates/website/layouts/footer.html
+++ b/templates/website/layouts/footer.html
@@ -31,7 +31,7 @@
 </div>
 </div>
 </div>
-<div class="col-xl-3 col-lg-1 col-md-6 col-sm-12 col-12">
+<div class="col-xl-1 col-lg-1 col-md-6 col-sm-12 col-12">
 <!--<div class="footer-item">-->
 <!--<h5>INSTAGRAM</h5>-->
 <!--<div class="insta-content">-->
@@ -58,7 +58,7 @@
 <!--</div>-->
 <!--</div>-->
 </div>
-<div class="col-xl-3 col-lg-5 col-md-6 col-sm-12 col-12">
+<div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 col-12">
 <div class="footer-item">
 <h5>CONTACT INFO</h5>
 <div class="contact-content">
@@ -84,18 +84,48 @@
 <div class="contact-inner">
 <i class="zmdi zmdi-time"></i>
 <div class="text">
+
 <div class="text-inner">
 <span class="text-1">Monday:</span>
-<span class="text-2">11:30 - 14:30 & 5:00 - 21:30</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
 </div>
+
 <div class="text-inner">
-<span class="text-1">Dinner: Mon- Thu </span>
-<span class="text-2">18:00-21:30</span>
+<span class="text-1">Tuesday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
 </div>
+
+
 <div class="text-inner">
-<span class="text-1">Dinner: Fri- Sun</span>
-<span class="text-2">19:00-21:00</span>
+<span class="text-1">Wednessday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
 </div>
+
+
+<div class="text-inner">
+<span class="text-1">Thursday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 21:30</span>
+</div>
+
+
+<div class="text-inner">
+<span class="text-1">Friday:</span>
+<span class="text-2">11:30 - 14:30 & 17:00 - 22:00</span>
+</div>
+
+
+<div class="text-inner">
+<span class="text-1">Saturday:</span>
+<span class="text-2">12:00 - 15:00 & 17:00 - 22:30</span>
+</div>
+
+
+<div class="text-inner">
+<span class="text-1">Sunday:</span>
+<span class="text-2">12:00 - 15:00 & 17:00 - 21:30</span>
+</div>
+
+
 </div>
 </div>
 </div>
