--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -10,7 +10,7 @@
   <!-- FAVICON -->
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'superadmin/assets/images_ex/icon.png' %}" />
   <!-- TITLE -->
-  <title>Superadmin</title>
+  <title>Royal Spice | Superadmin</title>
   <!-- BOOTSTRAP CSS -->
   <link id="style" href="{% static 'superadmin/assets/plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
   <!-- STYLE CSS -->
@@ -78,7 +78,7 @@
         <div class="app-sidebar">
           <div class="side-header">
             <a class="header-brand1" href="{% url 'superadmin:dashboard' %}">
-              <h3>SUPERADMIN</h3>
+              <h3>Royal Spice</h3>
             </a>
             <!-- LOGO -->
           </div>
