--- a/templates/superadmin/login/login.html
+++ b/templates/superadmin/login/login.html
@@ -9,7 +9,7 @@
   <!-- FAVICON -->
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'superadmin/assets/images_ex/icon.png' %}" />
   <!-- TITLE -->
-  <title>Superadmin</title>
+  <title>Royal Spice | Superadmin</title>
   <!-- BOOTSTRAP CSS -->
   <link id="style" href="{% static 'superadmin/assets/plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
   <!-- STYLE CSS -->
