--- a/templates/website/contact/contactus.html
+++ b/templates/website/contact/contactus.html
@@ -25,7 +25,8 @@
 <div class="contact-info contact-address">
 <i class="zmdi zmdi-pin"></i>
 <h4>Address Location</h4>
-<span>Reon, 1535 Broadway, New York</span>
+<span>Royal Spice, 827 William street Ste B
+, Longmeadow MA 01106</span>
 </div>
 </div>
 <div class="col-6">
