--- a/templates/website/about/about.html
+++ b/templates/website/about/about.html
@@ -6,22 +6,22 @@
 <div class="container">
 <div class="breadcrumb-inner">
 <h1>About Us</h1>
-<span class="breadcrumbs-text">Eget duis at tellus at urna condimentum. Mauris sit amet massa. Nullam non nisi est sit amet.</span>
+<!--<span class="breadcrumbs-text">Eget duis at tellus at urna condimentum. Mauris sit amet massa. Nullam non nisi est sit amet.</span>-->
 </div>
 </div>
 </section>
 
 
-<section class="about-story-section section-box">
-<div class="container">
-<div class="story-content">
-<h3 class="special-heading">Discover</h3>
-<h2 class="special-heading-1">OUR STORY</h2>
-<p>Ultrices vitae auctor eu augue. Pellentesque dignissim enim sit amet venenatis . Vulputate enim nulla aliquet porttitor lacus luctus. Dictumst quisque sagittis purus sit a. Praesent elementum facilisis leo vel fringilla est. Volutpat sed cras ornare arcu dui vivamus arcu felis. Non sodales neque sodales ut etiam sit amet ante. Lectus pro vivamus nibh nisl condimentum id venenatis a condimentum vitae.</p>
-<img src="{% static 'website/images/icons/about-story.png' %}" alt="story">
-</div>
-</div>
-</section>
+<!--<section class="about-story-section section-box">-->
+<!--<div class="container">-->
+<!--<div class="story-content">-->
+<!--<h3 class="special-heading">Discover</h3>-->
+<!--<h2 class="special-heading-1">OUR STORY</h2>-->
+<!--<p>Ultrices vitae auctor eu augue. Pellentesque dignissim enim sit amet venenatis . Vulputate enim nulla aliquet porttitor lacus luctus. Dictumst quisque sagittis purus sit a. Praesent elementum facilisis leo vel fringilla est. Volutpat sed cras ornare arcu dui vivamus arcu felis. Non sodales neque sodales ut etiam sit amet ante. Lectus pro vivamus nibh nisl condimentum id venenatis a condimentum vitae.</p>-->
+<!--<img src="{% static 'website/images/icons/about-story.png' %}" alt="story">-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 
 
 <section class="about-us-section section-box">
@@ -41,7 +41,11 @@
 <div class="about-content">
 <h3 class="special-heading">Discover</h3>
 <h2 class="special-heading-1">ABOUT US</h2>
-<p>Ultrices vitae auctor eu augue. Pellentesque dignissim eni amet venenatis . Vulputate enim nulla aliquet porttitor la. Dictumst quisque sagittis purus sit a. Praesent elementum facil fringilla est. Volutpat sed cras ornare arcu dui vivamus arcu felis. Ma etiam tempor orci eu lobortis elementum nibh tellus. Lectus proin nibh nisl condimentum id venenatis.</p>
+<p>At Royalspice, we take pride in combining traditional Indian cooking techniques with innovative ingredient pairings, forward-thinking flavor profiles, contemporary presentation, and exceptional table service. Dining with us offers a unique and modern interpretation of Indian cuisine.</p>
+<p>We are passionate about blending classic and contemporary flavors to create a new approach to Indian cooking. While we honor and preserve time-honored techniques, we also delight in surprising our guests with creative and unique dishes.</p>
+<p>Our culinary journey begins with sourcing the highest quality ingredients, which are then enhanced with freshly ground, in-house spices. Our talented culinary team transforms these premium components into memorable and flavorful meals that stand out.</p>
+<p>Our menu is anchored by beloved classics such as naan bread, palak paneer, and tandoori chicken, which form the foundation of our offerings. Whether you’re craving a traditional dish like chicken tikka masala or eager to try one of our new creations such as nadan chicken, our goal is to make Indian cuisine accessible and enjoyable for everyone</p>
+<p>At Royalspice, we strive to create an inviting dining experience where traditional meets modern, and familiar flavors are reimagined in exciting new ways. We look forward to welcoming you and providing a meal that is both comforting and adventurous.</p>
 </div>
 </div>
 </div>
