--- a/templates/website/contact/contactus.html
+++ b/templates/website/contact/contactus.html
@@ -7,7 +7,7 @@
 <div class="container">
 <div class="breadcrumb-inner">
 <h1>Contact Us</h1>
-<span class="breadcrumbs-text">Volutpat odio facilisis mauris sit. Consectetur adipiscing elit pellentesque habitant morbi tristique.</span>
+<!--<span class="breadcrumbs-text">Volutpat odio facilisis mauris sit. Consectetur adipiscing elit pellentesque habitant morbi tristique.</span>-->
 </div>
 </div>
 </section>
