--- a/templates/website/gallery/gallery-view.html
+++ b/templates/website/gallery/gallery-view.html
@@ -39,14 +39,14 @@
 </div>
 </section>
 
-  <section class="breadcrumb-gallery-grid-v1 breadcrumb-section section-box" style="background-image: url({% static 'website/images/gallery-grid-v1-bc.jpg' %})">
-<div class="container">
-<div class="breadcrumb-inner">
-<h1>Gallery </h1>
-<span class="breadcrumbs-text"></span>
-</div>
-</div>
-</section>
+<!--  <section class="breadcrumb-gallery-grid-v1 breadcrumb-section section-box" style="background-image: url({% static 'website/images/gallery-grid-v1-bc.jpg' %})">-->
+<!--<div class="container">-->
+<!--<div class="breadcrumb-inner">-->
+<!--<h1>Gallery </h1>-->
+<!--<span class="breadcrumbs-text"></span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 
 
 
