--- a/templates/superadmin/menu/menu-create.html
+++ b/templates/superadmin/menu/menu-create.html
@@ -48,7 +48,7 @@
                                             <div class="row">
 												<div class="form-group col-lg-6">
                                                     <label for="" class="form-label">Title</label>
-                                                    <input type="text" class="form-control" id="" placeholder="Course Title" name="title" required value="{{data.title}}">
+                                                    <input type="text" class="form-control" id="" placeholder="Title" name="title" required value="{{data.title}}">
                                                 </div>
                                                 <div class="form-group col-lg-6 col-12">
                                                     <label for="" class="form-label">Select Category</label>
