--- a/templates/website/home/index.html
+++ b/templates/website/home/index.html
@@ -58,9 +58,9 @@
 <div class="row">
 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 <div class="story-content">
-<h3 class="special-heading">Discover</h3>
+<!--<h3 class="special-heading">Discover</h3>-->
 <h2 class="special-heading-1">ABOUT US</h2>
-<p>“Cras sed felis eget velit aliquet. Etiam dignissim diam lobortis scelerisque fermentum. Eu non diam phasellus vestibulum lore risus ultricies tristique varius quam quis hendrerit dolor.”</p>
+<p>“At Royalspice, we take pride in combining traditional Indian cooking techniques with innovative ingredient pairings, forward-thinking flavor profiles, contemporary presentation, and exceptional table service. Dining with us offers a unique and modern interpretation of Indian cuisine.”</p>
 <!--<div class="story-quote">-->
 <!--<img src="{% static 'website/images/hp-1-story-3.jpg' %}" alt="story">-->
 <!--<div class="info">-->
@@ -100,7 +100,7 @@
 <div class="feature-content">
 <div class="feature-detail">
 <h3 class="special-heading">Testimonials</h3>
-<h2 class="special-heading-1">{{i.user|upper}}</h2>
+<h2 class="special-heading-1" style="    font-size: 30px;">{{i.user|upper}}</h2>
 		<div class="star">
 			{% if i.star == 1 %}
 <i class="zmdi zmdi-star"></i>
@@ -121,6 +121,19 @@
 <i class="zmdi zmdi-star"></i>
 <span><i class="zmdi zmdi-star-outline"></i></span>
 <span><i class="zmdi zmdi-star-outline"></i></span>
+            {% elif i.star == 4 %}
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+
+            {% elif i.star == 5 %}
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
 			{% endif %}
 
 </div>
